@@ -16,6 +16,9 @@ PTXCONF_PROJECT_VERSION="-0.00"
 PTXCONF_DEBUG_TEST=m
 PTXCONF_DEVMEM2=m
 # PTXCONF_DEVNODES is not set
+PTXCONF_GCC_EXTRACT_INSN_TEST=m
+PTXCONF_GCC_EXTRACT_INSN_TEST_TRUNK=y
+# PTXCONF_GCC_EXTRACT_INSN_TEST_FORCE_ERROR is not set
 PTXCONF_IWATCHER=m
 PTXCONF_IWATCHER_TRUNK=y
 PTXCONF_LIBUIO=m
