@@ -13,6 +13,7 @@ PTXCONF_COLLECTION_MANUAL=y
 # PTXCONF_DEVMEM2 is not set
 # PTXCONF_DOSFSTOOLS is not set
 # PTXCONF_EXPAT is not set
+# PTXCONF_GCC_EXTRACT_INSN_TEST is not set
 # PTXCONF_GDB is not set
 # PTXCONF_GLIB is not set
 # PTXCONF_GLIBMM is not set
