@@ -2,6 +2,8 @@
 
 	* common: adapt latest patch sets to linux-2.6.37.6
 	* ptxconfig: include and enable new local source iwatcher-trunk
+	* ptxconfig: include and enable new local source
+		     gcc_extract_insn_test-trunk
 
 2011-12-17	Stephan Linz <linz@li-pro.net>
 
